# gemma-quizmaker

./: .gitignore  .mailmap  LICENSE  README.md  pyproject.toml  start.ps1  start.sh
app/: main.py
app/static/: index.html
docs/: CONCEPT.md  LONG_HANDOFF_M3_PLAN.txt  M1_API_CONTRACT.md  M3_API_CONTRACT.md  ROADMAP.md  TEST_RESULTS.md  TEST_RESULTS_M2.md  TEST_RESULTS_M3.md  concept-notes.md
docs/reference/: test-google-gemma-4.ipynb
quizmaker/: __init__.py  core_loop.py  gemma.py  schemas.py  storage.py
scripts/: generate_mcq.py  run_core_loop.py  stub_server.py  test_gemma4.py
tests/: test_core_loop.py  test_gemma_classifier.py  test_gemma_parsing.py  test_gemma_verifier.py  test_langgraph_core_loop.py  test_main_message_endpoint.py  test_real_model_integration.py  test_schemas.py
