[project]
name = "gemma-quizmaker"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "transformers>=4.51.0",
    "torch",
    "torchvision",
    "pillow",
    "accelerate",
    "bitsandbytes",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
